[gd_scene load_steps=18 format=3 uid="uid://2210vbo470ku"]

[ext_resource type="Script" path="res://src/main_game.gd" id="1_mqumh"]
[ext_resource type="Texture2D" uid="uid://b4ugd0r7b8p7c" path="res://assets/ui/obsidian_game_background.png" id="2_uyp1c"]
[ext_resource type="Texture2D" uid="uid://o5ua3mryottk" path="res://assets/ui/water_drop.png" id="3_80gnh"]
[ext_resource type="Texture2D" uid="uid://bp8kexh74y1a4" path="res://assets/ui/lava_drop.png" id="4_g6n4p"]
[ext_resource type="Texture2D" uid="uid://jxnhcy4qoogx" path="res://assets/ui/hourglass.png" id="5_j65u2"]
[ext_resource type="Texture2D" uid="uid://cenvdol3cdkvl" path="res://assets/ui/restart.png" id="6_pvojk"]
[ext_resource type="Texture2D" uid="uid://bc1wgwj8rf1gr" path="res://assets/ui/go_to_menu.png" id="6_rutm1"]
[ext_resource type="AudioStream" uid="uid://dotxfxq7hop4u" path="res://assets/audio/sounds/13287__schademans__pipe6.wav" id="9_cq6tf"]
[ext_resource type="AudioStream" uid="uid://dg3ytmfd41acx" path="res://assets/audio/sounds/274177__littlerobotsoundfactory__jingle_win_synth_03.wav" id="10_0dvfh"]
[ext_resource type="AudioStream" uid="uid://cm80vvuu2chcr" path="res://assets/audio/sounds/166822__quistard__water-pouring-4.ogg" id="10_wpwex"]
[ext_resource type="AudioStream" uid="uid://bd5u4s4n38njt" path="res://assets/audio/sounds/577880__casiba842__heavy-bubbles.wav" id="11_cipi1"]
[ext_resource type="AudioStream" uid="uid://bdd5nn1nsxp6l" path="res://assets/audio/sounds/652328__imataco__lose-sound.wav" id="12_v52k7"]

[sub_resource type="LabelSettings" id="LabelSettings_4go8j"]

[sub_resource type="InputEventAction" id="InputEventAction_hawk4"]
action = &"return_to_menu"

[sub_resource type="Shortcut" id="Shortcut_yimc3"]
events = [SubResource("InputEventAction_hawk4")]

[sub_resource type="InputEventAction" id="InputEventAction_db36q"]
action = &"restart"

[sub_resource type="Shortcut" id="Shortcut_8ap6f"]
events = [SubResource("InputEventAction_db36q")]

[node name="Network" type="Node2D"]
script = ExtResource("1_mqumh")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
offset_right = 384.0
offset_bottom = 216.0
texture = ExtResource("2_uyp1c")
stretch_mode = 1

[node name="TileMapHolder" type="Node2D" parent="."]
position = Vector2(96, 64)

[node name="GameResult" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 22.0
offset_right = 304.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
label_settings = SubResource("LabelSettings_4go8j")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_top = 8.0
offset_right = 384.0
offset_bottom = 19.0
text = "Level %s"
horizontal_alignment = 1

[node name="WaterLavaContainer" type="GridContainer" parent="."]
offset_left = 10.0
offset_top = 190.0
offset_right = 102.0
offset_bottom = 216.0
columns = 2

[node name="WaterTextureRect" type="TextureRect" parent="WaterLavaContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_80gnh")
stretch_mode = 2

[node name="WaterTargets" type="Label" parent="WaterLavaContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/2"

[node name="LavaTextureRect" type="TextureRect" parent="WaterLavaContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("4_g6n4p")
stretch_mode = 2

[node name="LavaTargets" type="Label" parent="WaterLavaContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/2"

[node name="MovesAndTimeContainer" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="MovesAndTimeContainer"]
layout_mode = 2

[node name="MovesTextLabel" type="Label" parent="MovesAndTimeContainer/HBoxContainer"]
layout_mode = 2
text = "Moves:"

[node name="MovesLabel" type="Label" parent="MovesAndTimeContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="MovesAndTimeContainer"]
layout_mode = 2

[node name="TimeTextureRect" type="TextureRect" parent="MovesAndTimeContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("5_j65u2")
stretch_mode = 2

[node name="TimeLabel" type="Label" parent="MovesAndTimeContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 345.0
offset_top = 8.0
offset_right = 381.0
offset_bottom = 24.0

[node name="ReturnToMenu" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
shortcut = SubResource("Shortcut_yimc3")
shortcut_in_tooltip = false
texture_normal = ExtResource("6_rutm1")

[node name="RestartButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
shortcut = SubResource("Shortcut_8ap6f")
shortcut_in_tooltip = false
texture_normal = ExtResource("6_pvojk")

[node name="RotateTip" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
offset_left = 263.0
offset_right = 377.0
offset_bottom = 216.0
size_flags_vertical = 3
text = "Help the liquid reach its destination by rotating the pipes"
vertical_alignment = 1
autowrap_mode = 2

[node name="WaterLavaWarning" type="Label" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(96, 0)
offset_left = 281.0
offset_right = 377.0
offset_bottom = 216.0
size_flags_vertical = 3
text = "Water and lava must not be mixed"
vertical_alignment = 1
autowrap_mode = 2

[node name="RotatePipeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cq6tf")
bus = &"Sounds"

[node name="WaterActivatedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_wpwex")
bus = &"Sounds"

[node name="LavaActivatedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_cipi1")
bus = &"Sounds"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_0dvfh")
bus = &"Sounds"

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_v52k7")
bus = &"Sounds"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="HBoxContainer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
